# asktable_mcp_server

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
src/: server.py
src/asktable_mcp_server/: server.py  sse_server.py  tools.py  version.py
