[project]
name = "asktable-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chenchengfeng", email = "1258839505@qq.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
asktable-mcp-server = "asktable_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
